# Jarvis

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 001_initial_schema.sql  002_guild_configs.sql  003_channels.sql  004_mute_history.sql  005_ban_history.sql  006_spam_tracking.sql  007_user_vc_preferences.sql  008_rate_limits.sql  009_global_mutes.sql
src/: lib.rs  main.rs
src/bot/: data.rs  error.rs  framework.rs  mod.rs
src/commands/: mod.rs  setup.rs  stats.rs
src/commands/owner/: ban.rs  mod.rs  mute.rs  rename.rs  retag.rs  transfer.rs
src/components/: ban_selector.rs  limit_selector.rs  mod.rs  naming_prompt.rs  owner_actions.rs  spam_prompt.rs  tag_selector.rs  topic_modal.rs
src/config/: settings.rs
src/constants/: embeds.rs  mod.rs  tags.rs  timeouts.rs
src/db/: pool.rs
src/db/models/: ban_record.rs  global_mute.rs  guild_config.rs  mod.rs  mute_record.rs  spam_record.rs  user_vc_preference.rs  voice_channel.rs
src/db/queries/: ban.rs  global_mute.rs  guild_config.rs  mod.rs  mute.rs  rate_limit.rs  spam.rs  user_vc_preference.rs  voice_channel.rs
src/handlers/: event_handler.rs  interaction.rs  mod.rs  voice_state.rs
src/services/: mod.rs
src/services/jtc/: channel_creator.rs  channel_deleter.rs  deadline_tracker.rs  mod.rs  queue.rs  welcome_embed.rs
src/services/moderation/: ban_service.rs  mod.rs  mute_service.rs
src/services/spam/: detector.rs  mod.rs  timeout_calculator.rs
src/services/stats/: aggregator.rs  mod.rs  (+1 more)
src/utils/: formatting.rs  mod.rs  permissions.rs  profanity.rs
